Add each type of GC logs.